Logtalk/examples/errors/singletons1.lgt

:- object(singletons(L)).
		
	predicate(A) :-
		write(C).
	
:- end_object.

